--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="楚天阔 : ">
+    <meta name="description" content="楚天阔目前的工作情况">
 
     <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 
-    <title>楚天阔</title>
+    <title>楚天阔目前的工作情况</title>
   </head>
 
   <body>
@@ -17,8 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-          <h1 id="project_title">楚天阔</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">楚天阔目前的工作情况</h1>
 
         </header>
     </div>
@@ -26,33 +25,26 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a id="欢迎来到楚天阔的个人网站" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E6%9D%A5%E5%88%B0%E6%A5%9A%E5%A4%A9%E9%98%94%E7%9A%84%E4%B8%AA%E4%BA%BA%E7%BD%91%E7%AB%99" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>欢迎来到楚天阔的个人网站</h1>
+        <h2>
+        <a href="http://gpp.tkchu.me">游戏编程模式</a>
+        </h2>
+        <p>《游戏编程模式》是由曾在EA工作八年的Bob Nystrom写就，讲述在游戏开发中各种常见的编程模式。
+        通过阅读此书，可以更好的理解设计模式和工程化开发。</p>
+        <p>翻译已然完成。<p>
 
-<h2>
-<a id="游戏编程模式" class="anchor" href="#%E6%B8%B8%E6%88%8F%E7%BC%96%E7%A8%8B%E6%A8%A1%E5%BC%8F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://gpp.tkchu.me">游戏编程模式</a>
-</h2>
-
-<p>《游戏编程模式》是由曾在EA工作八年的Bob Nystrom写就，讲述在游戏开发中各种常见的编程模式。
-通过阅读此书，可以更好的理解设计模式和工程化开发。</p>
-
-<h2>
-<a id="我的博客" class="anchor" href="#%E6%88%91%E7%9A%84%E5%8D%9A%E5%AE%A2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://blog.tkchu.me">我的博客</a>
-</h2>
-
-<p>一些杂谈</p>
+        <h2>
+        <a href="http://blog.tkchu.me">我的博客</a>
+        </h2>
+        <p>一些杂谈</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">楚天阔 maintained by <a href="https://github.com/tkchu">tkchu</a></p>
+        <p class="copyright">楚天阔目前的工作情况 maintained by <a href="https://github.com/tkchu">tkchu</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-
-
   </body>
 </html>
