--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </h2>
         <p>一些杂谈</p>
         <h2><a href="https://github.com/miloyip/game-programmer">游戏程序员的学习之路</a></h2>
-        <p>《游戏程序员的学习之路》由已在游戏业界工作超过二十年的Milo Yip完成，介绍了游戏程序员的学习路线。</p>
-        <p>楚天阔已将其翻译为中文版，并将书籍修改为英文版对应的最新中文版本，链接改为豆瓣链接。</p>
+        <p>《游戏程序员的学习之路》由已在游戏业界工作超过二十年的Milo Yip完成，介绍了游戏程序员的学习路线，并推荐了相应的书籍。</p>
+        <p>楚天阔已将其翻译为中文版，并将书籍修改为英文版对应的最新中文版本。</p>
         <p>这套路线中尤为有价值的是游戏图形程序的学习部分。</p>
       </section>
     </div>
