新增 游戏制作工具箱

--- a/index.html
+++ b/index.html
@@ -32,14 +32,23 @@
         通过阅读此书，可以更好的理解设计模式和工程化开发。</p>
         <p>楚天阔已将其翻译为中文版。<p>
 
-        <h2>
-        <a href="http://blog.tkchu.me">我的博客</a>
-        </h2>
-        <p>一些杂谈</p>
         <h2><a href="https://github.com/miloyip/game-programmer">游戏程序员的学习之路</a></h2>
         <p>《游戏程序员的学习之路》由已在游戏业界工作超过二十年的Milo Yip完成，介绍了游戏程序员的学习路线，并推荐了相应的书籍。</p>
         <p>楚天阔已将其翻译为中文版，并将书籍修改为英文版对应的最新中文版本。</p>
         <p>这套路线中尤为有价值的是游戏图形程序的学习部分。</p>
+
+        <h2><a href="http://space.bilibili.com/2395115/#!/channel/detail?cid=14060">游戏制作工具箱</a></h2>
+        <p>《游戏制作工具箱》是一档关于游戏设计的视频系列，作者为马克·布朗，他对游戏中的很多机制进行了讨论和总结。</p>
+        <p>楚天阔已经完成了2015年之前视频的翻译工作，在有闲暇时间的情况下，将对这个系列继续翻译</p>
+
+        <h2><a href="http://steamcommunity.com/sharedfiles/filedetails/?id=914576607">steam绿光游戏《货郎》</a></h2>
+        <p>《货郎》是一款四处奔波的小贩商业模拟游戏。你需要使用多种货币，管理并买卖易于腐烂的各种货物，以养活自己。</p>
+        <p>游戏已经登陆绿光，正在筹集选票。</p>
+
+        <h2>
+        <a href="http://blog.tkchu.me">我的博客</a>
+        </h2>
+        <p>一些杂谈</p>
       </section>
     </div>
 
