货郎过绿光了

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 
         <h2><a href="http://steamcommunity.com/sharedfiles/filedetails/?id=914576607">steam绿光游戏《货郎》</a></h2>
         <p>《货郎》是一款四处奔波的小贩商业模拟游戏。你需要使用多种货币，管理并买卖易于腐烂的各种货物，以养活自己。</p>
-        <p>游戏已经登陆绿光，正在筹集选票。</p>
-        <p>游戏尚处于初期，<a href="http://steamcommunity.com/sharedfiles/filedetails/?id=914576607">请在steam上投我一票。</a></p>
+        <p>游戏已经通过绿光，正在完善游戏内容。</p>
 
         <h2>
         <a href="http://blog.tkchu.me">我的博客</a>
