改到知乎专栏

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p>游戏已经通过绿光，正在完善游戏内容。</p>
 
         <h2>
-        <a href="http://blog.tkchu.me">我的博客</a>
+        <a href="https://zhuanlan.zhihu.com/tkchu">知乎专栏:游戏炼金术</a>
         </h2>
         <p>一些杂谈</p>
       </section>
