--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         <p>楚天阔已经完成了2015年之前视频的翻译工作，在有闲暇时间的情况下，将对这个系列继续翻译</p>
 
         <h2>
+        <a href="https://wiki.tkchu.me">游戏设计元素</a>
+        </h2>
+        <p>一个记录各种游戏设计元素的网站。目标是通过记录前人的设计来更好的沟通交流，并帮助新手进行游戏设计。</p>
+        <p>这一网站仍处于建设之中</p>
+
+        <h2>
         <a href="https://zhuanlan.zhihu.com/tkchu">知乎专栏:游戏炼金术</a>
         </h2>
         <p>一些杂谈</p>
