--- a/404.html
+++ b/404.html
@@ -53,14 +53,16 @@ window.onload = function(){
     if(url_list.length == 1){
         window.location.replace(url + '#');
     }
-    var append_list = [ "(╯‵口′)╯┻━┻           (0口0)",
-                        "(╯‵口′)╯  ┻━┻         (0口0)",
-                        "(╯‵口′)╯    ┻━┻       (0口0)",
-                        "(╯‵口′)╯      ┻━┻     (0口0)",
-                        "(╯‵口′)╯        ┻━┻   (0口0)",
-                        "(╯‵口′)╯          ┻━┻ (0口0)",
-                        "(￣O￣)            ┻━┻(>口<)",
-                        "(T _ T)            ┯━┯(-_-#)"];
+    var append_list = [ "(╯‵口′)╯┻━┻···········(0口0)",
+                        "(╯‵口′)╯··┻━┻·········(0口0)",
+                        "(╯‵口′)╯····┻━┻·······(0口0)",
+                        "(╯‵口′)╯······┻━┻·····(0口0)",
+                        "(╯‵口′)╯········┻━┻···(0口0)",
+                        "(╯‵口′)╯··········┻━┻·(0口0)",
+                        "(╯‵口′)╯···········┻━┻(>口<)",
+                        "(╯‵口′)╯···········┯━┯(-_-#)",
+                        "(╯‵口′)╯···········┯━┯(-_-#)",
+                        ];
     var append_list_iter = 0;
     setInterval(function() {
         append_list_iter += 1;
