--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <a href="https://zhuanlan.zhihu.com/tkchu">知乎专栏:游戏炼金术</a>
         </h2>
         <p>一些杂谈</p>
+
+        <h2>
+        <a href="https://id5.163.com/">第五人格</a>
+        </h2>
+        <p>目前在网易杭州工作</p>
       </section>
     </div>
 
